# Vulkan-ExtensionLayer

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml
.github/workflows/: build_android.yml  build_linux.yml  build_macos.yml  build_windows.yml  ci.yml  format.yml
build-android/: AndroidManifest.xml  build_all.sh  install_all.sh  known_good.json  test_APK.sh  update_external_sources_android.bat  update_external_sources_android.sh
build-android/cmake/: README.md
build-android/cmake/layerlib/: CMakeLists.txt
build-android/jni/: Android.mk  Application.mk
build-android/res/values/: strings.xml
cmake/: FindVulkanHeaders.cmake
docs/: memory_decompression_layer.md  shader_object_layer.md  synchronization2_layer.md
layers/: CMakeLists.txt  VkLayer_khronos_memory_decompression.def  VkLayer_khronos_shader_object.def  VkLayer_khronos_synchronization2.def  VkLayer_khronos_timeline_semaphore.def  decompression.cpp  decompression.h  hash_table.cpp  hash_table.h  libVkLayer_khronos_shader_object.map  libVkLayer_khronos_synchronization2.map  libVkLayer_khronos_timeline_semaphore.map  list.h  shader_object.cpp  synchronization2.cpp  synchronization2.h  timeline_semaphore.c  vk_alloc.h  vk_api_hash.h  vk_common.h  vk_layer_settings.txt  vk_util.h
layers/decompression/: decompression.cpp  decompression.h
layers/decompression/shaders/: ByteIO.glsl  GInflate.glsl  README.txt  TileDecoder.glsl  Utils.glsl  compile.bat  compile.sh  copyCount.glsl
layers/decompression/shaders/spirv/: GInflate16_HAVE_INT16_HAVE_INT64_vk.h  GInflate16_HAVE_INT16_vk.h  GInflate16_HAVE_INT64_vk.h  GInflate16_vk.h  GInflate32_HAVE_INT16_HAVE_INT64_vk.h  GInflate32_HAVE_INT16_vk.h  GInflate32_HAVE_INT64_vk.h  GInflate32_vk.h  GInflate64_HAVE_INT16_HAVE_INT64_vk.h  GInflate64_HAVE_INT16_vk.h  GInflate64_HAVE_INT64_vk.h  GInflate64_vk.h  GInflate8_HAVE_INT16_HAVE_INT64_vk.h  GInflate8_HAVE_INT16_vk.h  GInflate8_HAVE_INT64_vk.h  GInflate8_vk.h  IndirectGInflate16_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate16_HAVE_INT16_vk.h  IndirectGInflate16_HAVE_INT64_vk.h  IndirectGInflate16_vk.h  IndirectGInflate32_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate32_HAVE_INT16_vk.h  IndirectGInflate32_HAVE_INT64_vk.h  IndirectGInflate32_vk.h  IndirectGInflate64_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate64_HAVE_INT16_vk.h  IndirectGInflate64_HAVE_INT64_vk.h  IndirectGInflate64_vk.h  IndirectGInflate8_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate8_HAVE_INT16_vk.h  IndirectGInflate8_HAVE_INT64_vk.h  IndirectGInflate8_vk.h  copyCount_vk.h
layers/json/: VkLayer_khronos_memory_decompression.json.in  VkLayer_khronos_shader_object.json.in  VkLayer_khronos_synchronization2.json.in  VkLayer_khronos_timeline_semaphore.json.in
layers/shader_object/: shader_object.cpp  shader_object_structs.h  shader_object_util.h
layers/shaders/memory_decompression/: ByteIO.glsl  Utils.glsl  compile.sh  copyCount.glsl  readme.txt
layers/shaders/memory_decompression/spirv/: GInflate16_HAVE_INT16_vk.h  GInflate16_HAVE_INT64_vk.h  GInflate32_HAVE_INT16_HAVE_INT64_vk.h  GInflate32_HAVE_INT16_vk.h  GInflate64_HAVE_INT16_HAVE_INT64_vk.h  GInflate64_HAVE_INT16_vk.h  GInflate64_vk.h  GInflate8_HAVE_INT16_HAVE_INT64_vk.h  GInflate8_HAVE_INT16_vk.h  GInflate8_vk.h  IndirectGInflate16_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate16_HAVE_INT16_vk.h  IndirectGInflate16_vk.h  IndirectGInflate32_HAVE_INT16_vk.h  IndirectGInflate32_HAVE_INT64_vk.h  IndirectGInflate32_vk.h  IndirectGInflate64_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate64_HAVE_INT16_vk.h  IndirectGInflate64_HAVE_INT64_vk.h  IndirectGInflate8_HAVE_INT16_HAVE_INT64_vk.h  IndirectGInflate8_HAVE_INT64_vk.h  copyCount_vk.h
scripts/: CMakeLists.txt  android.py  check_code_format.py  clang-format-diff.py  common_ci.py  common_codegen.py  dispatch_table_helper_generator.py  generate_source.py  github_ci_android.py  github_ci_build_desktop.py  github_ci_check_codegen.py  helper_file_generator.py  known_good.json  lvl_genvk.py  lvt_file_generator.py  shader_object_data.json  shader_object_generator.py  update_deps.py
scripts/generators/: api_version_generator.py  extension_helper_generator.py  safe_struct_generator.py
tests/: CMakeLists.txt  decompression_data.h  decompression_tests.cpp  decompression_tests.h  extension_layer_tests.cpp  extension_layer_tests.h  shader_object_tests.cpp  shader_object_tests.h  synchronization2_tests.cpp  synchronization2_tests.h  test_common.h  test_environment.cpp  test_environment.h  vkrenderframework.cpp  vkrenderframework.h  vktestbinding.cpp  vktestbinding.h  vktestframework.cpp  vktestframework.h  vktestframeworkandroid.cpp  vktestframeworkandroid.h
tests/android/: AndroidManifest.xml  CMakeLists.txt  README.md
tests/android/res/values/: strings.xml
tests/generator_source/: test_layer_location.h
utils/: CMakeLists.txt  allocator.cpp  allocator.h  log.h  vk_concurrent_unordered_map.h  vk_format_utils.cpp  vk_format_utils.h  vk_layer_config.cpp  vk_layer_config.h  vk_loader_platform.h  vk_string_utils.h
